--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^4.3.5",
+    "framer": "^1.1.3",
+    "framer-motion": "^1.6.7",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "save-dev": "^2.0.0",
     "typescript": "3.6.3"
   },
   "scripts": {
